UtahLiveDataTest/src/objects/ReportBudgetCategory__c.object
<CustomObject>
    <description>[Business] Defines all the Budget Categories for the Report and Progress Report Details</description>
    <fields>
        <fullName>CategoryCode__c</fullName>
        <label>Category Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryDescription__c</fullName>
        <label>Category Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>RowNumber</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program Income</fullName>
                </value>
                <value>
                    <fullName>Federal Cash</fullName>
                </value>
                <value>
                    <fullName>Recipient Share</fullName>
                </value>
                <value>
                    <fullName>Federal Expenditures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MST: Report Budget Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Budget Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>